--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
   
   <!-- Feuilles de style refondues -->
-  <link rel="stylesheet" href="styles/satoshi.css">
+  <!-- <link rel="stylesheet" href="styles/satoshi.css"> -->
   <link rel="stylesheet" href="styles.css">
   <link rel="stylesheet" href="styles/vote-component.css">
   <link rel="stylesheet" href="styles/chapter-menu.css">
