Mise à jour reunionv2 - nouvelle version

--- a/public/index.html
+++ b/public/index.html
@@ -438,12 +438,12 @@
       
       <!-- Actions finales -->
       <div class="solo-end-actions">
-        <button id="soloDownloadBtn" class="button button-primary">
+        <!-- <button id="soloDownloadBtn" class="button button-primary">
           📥 Télécharger mon parcours (PDF)
-        </button>
-        <button id="soloShareBtn" class="button button-secondary">
+        </button> -->
+        <!-- <button id="soloShareBtn" class="button button-secondary">
           📤 Partager mon expérience
-        </button>
+        </button> -->
         <button id="soloReplayBtn" class="button button-secondary">
           🔄 Rejouer ce scénario
         </button>
