--- a/public/menu.html
+++ b/public/menu.html
@@ -91,6 +91,8 @@
       </div>
     </div>
 
+    <script src="/scripts/audio-player.js"></script>
+    <script src="/scripts/info-button.js"></script>
     <script src="scripts/menu.js"></script>
   </body>
 </html>
