--- a/public/index.html
+++ b/public/index.html
@@ -473,6 +473,8 @@
   <script src="/scripts/audio-player.js"></script>
   <script src="/scripts/info-button.js"></script>
   <script src="/scripts/connection-monitor.js"></script>
+  <script src="/scripts/fullscreen-manager.js"></script>
+  <script src="/scripts/message-sound.js"></script>
   <script src="scripts/game.js"></script>
 </body>
 </html>
