Mise à jour reunionv2 - nouvelle version

--- a/public/menu.html
+++ b/public/menu.html
@@ -38,7 +38,7 @@
                 <!-- Mode Solo - avec image au lieu d'emoji -->
                 <div class="mode-option" data-mode="solo" id="mode-option-solo">
                   <img src="/img/css/solo_1_White.png" alt="Mode Solo" class="mode-icon-img">
-                  <div class="mode-name">Solo</div>
+                  <div class="mode-name">sOlo</div>
                   <div class="mode-description">
                     Avancez à votre rythme à travers des chapitres interactifs, où
                     vos choix influencent l'histoire.
@@ -47,7 +47,7 @@
                 <!-- Mode Groupe - avec image au lieu d'emoji -->
                 <div class="mode-option" data-mode="group" id="mode-option-group">
                   <img src="/img/css/groupe_Blanc.png" alt="Mode Groupe" class="mode-icon-img">
-                  <div class="mode-name">Groupe</div>
+                  <div class="mode-name">grouPe</div>
                   <div class="mode-description">
                     Rejoignez une partie animée par un intervenant, où chaque
                     joueur peut participer aux choix et voir les résultats en
@@ -58,7 +58,7 @@
             </div>
             
             <button id="proceed-to-levels-button" class="launch-button">
-              Continuer
+              conTinuer
             </button>
           </div>
         </div>
@@ -104,7 +104,7 @@
               <div id="level-detail-creators" class="creators-list"></div>
             </div>
             <button id="launch-button" class="launch-button">
-              Commencer l'aventure
+              coMmencer l'aVenturE
             </button>
           </div>
         </div>
