--- a/public/info.html
+++ b/public/info.html
@@ -77,7 +77,7 @@
             content: "";
             position: absolute;
             top: 0;
-            left: 0;
+            left: 1px;
             width: 100%;
             height: 100%;
             background-image: var(--texture-papier-image);
