Nouvelle version V3 pour la Reunion

--- a/public/index.html
+++ b/public/index.html
@@ -2,6 +2,7 @@
 <html lang="fr">
 <head>
   <meta charset="UTF-8">
+  <link rel="icon" type="image/png" href="/img/css/favicon_test.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
   <title>Jeu Questions Ramifiées - Sensibilisation LGBTQIA+</title>
   
@@ -46,9 +47,9 @@
   <div id="intervenant-screen" class="screen">
     <div class="desktop-layout-container">
       <!-- Zone Image (vide pour image future) -->
-      <div id="prout" class="desktop-image-zone empty">
+      <div id="prout" class="desktop-image-zone">
         <div class="image-placeholder-text">
-          <p>Zone réservée pour<br>image contextuelle</p>
+          <img src="img/css/(MJ)_fond_A_prof_ecole.png" alt="Contexte" class="question-image" style="object-fit: cover;">
         </div>
       </div>
       
@@ -231,9 +232,9 @@
   <div id="player-screen" class="screen">
     <div class="desktop-layout-container">
       <!-- Zone Image (vide pour image future) -->
-      <div id="proute" class="desktop-image-zone empty">
+      <div id="proute" class="desktop-image-zone">
         <div class="image-placeholder-text">
-          <p>Zone réservée pour<br>image contextuelle</p>
+          <img src="img/css/(EA)_fond_A_plage.png" alt="Contexte" class="question-image" style="object-fit: cover;">
         </div>
       </div>
       
