--- a/public/menu.html
+++ b/public/menu.html
@@ -2,6 +2,7 @@
 <html lang="fr">
   <head>
     <meta charset="UTF-8" />
+    <link rel="icon" type="image/png" href="/img/css/favicon_test.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>RSG974</title>
     <link rel="stylesheet" href="styles/menu.css" />
@@ -73,7 +74,7 @@
         <div class="desktop-layout-container">
           <!-- Zone Image (gauche desktop, haut mobile) -->
           <div class="desktop-image-zone">
-            <img src="../img/Lgbt/img_contextuel/nico_gaetan_marche_des_fierte.png" alt="Nico et Gaetan marche des fiertés">
+            <img src="../img/css/(SEL)_fond_A_panneaux.png" alt="Panneaus avec Cameleon poser dessus">
           </div>
           
           <!-- Zone Contenu (droite desktop, bas mobile) -->
