Ajout de tous les fichiers du projet

--- a/public/index.html
+++ b/public/index.html
@@ -68,8 +68,8 @@
             </div>
             
             <div class="form-group">
-              <label for="lobbyNameInput">Nom de la partie</label>
-              <input type="text" id="lobbyNameInput" placeholder="Ex: Classe 3B" maxlength="30" class="input-institutional">
+              <label for="lobbyNameInput">Nom de la Ville </label>
+              <input type="text" id="lobbyNameInput" placeholder="Ex: Saint-Louis" maxlength="30" class="input-institutional">
             </div>
             
             <button id="createLobbyBtn" class="button button-primary">
