--- a/public/editeur.html
+++ b/public/editeur.html
@@ -492,7 +492,8 @@
         /* ---------------------------------------------------- */
 
         .choice {
-            display: grid;
+            display: flex;
+            flex-direction: column;
             grid-template-columns: 2fr 1fr 1fr 100px auto;
             gap: 1rem;
             margin-bottom: 1rem;
