review des bug 6nov

--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html lang="fr">
 <head>
   <meta charset="UTF-8">
-  <link rel="icon" type="image/png" href="/img/css/favicon_test.png" />
+  <link rel="icon" type="image/png" href="img/css/favicon_test.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
   <title>Jeu Questions Ramifiées - Sensibilisation LGBTQIA+</title>
   
@@ -565,17 +565,17 @@
   </div>
 
   <!-- Scripts -->
-  <script src="/socket.io/socket.io.js"></script>
+  <script src="socket.io/socket.io.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/qrious/4.0.2/qrious.min.js"></script>
   <script src="scripts/vote-component.js"></script>
   <script src="scripts/chapter-menu.js"></script>
   <script src="scripts/solo-mode.js"></script>
-  <script src="/scripts/menu-button.js"></script>
-  <script src="/scripts/audio-player.js"></script>
-  <script src="/scripts/info-button.js"></script>
-  <script src="/scripts/message-sound.js"></script>
-  <script src="/scripts/connection-monitor.js"></script>
-  <script src="/scripts/fullscreen-manager.js"></script>
+  <script src="scripts/menu-button.js"></script>
+  <script src="scripts/audio-player.js"></script>
+  <script src="scripts/info-button.js"></script>
+  <script src="scripts/message-sound.js"></script>
+  <script src="scripts/connection-monitor.js"></script>
+  <script src="scripts/fullscreen-manager.js"></script>
   <script src="scripts/game.js"></script>
 </body>
 </html>
